IDE warnings implemented (final, unused imports, other small improvements)